Examples/_ch147_missing_return_warn.txt
Examples/_ch147_missing_return.cpp: In function 'int g(bool)':
Examples/_ch147_missing_return.cpp:7:1: warning: control reaches end of non-void function [-Wreturn-type]
    7 | }
      | ^
Assembler messages:
Fatal error: can't create /tmp/tmp.Sv8ZeW1csS/_ch147_missing_return.o: No such file or directory
